function(add_test_module src_directory )
  Set(test_link_library ${ARGN})  
	file(GLOB_RECURSE src_list ${src_directory}/*.cc)
	foreach(src_file ${src_list})   
		string(REGEX MATCH "(([0-9a-zA-Z_]+)_test)\.cc" _ ${src_file})
		if(CMAKE_MATCH_1)	
			string(FIND ${CMAKE_MATCH_1} "_test" index)
			if(NOT ${index} STREQUAL "-1")
				string(SUBSTRING ${CMAKE_MATCH_1} 0 ${index} unit_library)
        string(APPEND ${unit_library} ${test_common_library})
				Set(test_target ${CMAKE_MATCH_1})
				Set(test_src ${src_directory}/${test_target}.cc)
				add_executable(${test_target} ${test_src})
				target_link_libraries(${test_target} PRIVATE ${unit_library} gtest ${test_link_library})
				set_target_properties(${test_target} PROPERTIES FOLDER test)
				add_test(NAME ${test_target} COMMAND ${test_target})
			endif()	
		endif()	
	endforeach()  
endfunction()

Set(gac_location_plugin_link_library 
	gtest
)

add_test_module(GACLocationPlugin ${gac_location_plugin_link_library})
